--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 		"@fontsource/abel": "^4.5.6",
 		"@iconify/svelte": "^3.0.0",
 		"@sveltejs/adapter-auto": "next",
-		"@sveltejs/kit": "next",
+		"@sveltejs/kit": "1.0.0-next.464",
 		"autoprefixer": "^10.3.7",
 		"cssnano": "^5.0.8",
 		"date-fns": "^2.29.2",
